# syslang

./: .clang-format  .gitignore  Makefile  README.md  binding.gyp  grammar.js  package.json  spec.syslang
bindings/node/: binding.cc
bindings/rust/: lib.rs
go-syslang/: .gitignore  Makefile  go.mod  go.sum  main.go
queries/: folds.scm  highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c  scanner.cc
syslang.js/: package.json  pnpm-lock.yaml  shell.nix  tsconfig.json
syslang.js/src/: Document.ts  Node.ts  anki.ts  (+4 more)
tree-sitter-syslang/: .clang-format  .editorconfig  .gitignore  .ignore  Cargo.toml  Makefile  Package.swift  binding.gyp  flake.nix  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  spec.syslang  tree-sitter.json
tree-sitter-syslang/bindings/c/: tree-sitter-syslang.h  tree-sitter-syslang.pc.in
tree-sitter-syslang/bindings/go/: binding.go  binding_test.go  go.mod
tree-sitter-syslang/bindings/node/: binding.cc  index.js
tree-sitter-syslang/bindings/python/tree_sitter_syslang/: __init__.py  binding.c
tree-sitter-syslang/bindings/rust/: build.rs
tree-sitter-syslang/queries/: folds.scm  highlights.scm  injections.scm
tree-sitter-syslang/src/: grammar.json  node-types.json  parser.c  scanner.c  scanner.cc
tree-sitter-syslang/test/corpus/: banner.txt  code.txt  comments.txt  datetime.txt  dev.txt  document.txt  emphasis.txt  headings.txt  horizontal-rule.txt  image.txt  indent.txt  italic_boundaries.txt  label.txt  links.txt  list.txt  outlines.txt  section.txt  tags.txt  tasks.txt  types.txt
(+25 files in other folders)
